--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+@media only screen  and (min-height: 1512px) and (max-height: 1512px) { 
+    
+}
+
+@media screen and (min-width: 982px) and (max-width: 982px) {
+
+  }
