--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,42 +1,56 @@
 <div class="main-container">
     <div class="left-container">
         <div class="content">
-            <h1 class="title">Hello. I’m a freelance user
-                interface developer</h1>
-            <p class="sub">My name  is  Eleomar Halaman, I craft
-                user interface using modern frontend web technologies</p>
+            <h1 class="title">Hello. I’m a freelance user interface developer</h1>
+            <p class="sub">
+                My name is Eleomar Halaman, I craft user interface using modern frontend
+                web technologies
+            </p>
             <div class="button-connect">
-                <img src="../../../assets/images/Mail.png" alt="">
+                <img src="../../../assets/images/Mail.png" alt="" />
                 <p>Let’s work together</p>
             </div>
-           
+
         </div>
-        
     </div>
     <div class="right-container">
-       <div class="page1-content-container">
-        <div class="content">
-            <img id="profilePicture" src="../../../assets/images/profile.png" alt="" srcset="">
+        <div class="page1-content-container">
+            <div class="content">
+                <img id="profilePicture" src="../../../assets/images/profile.png" alt="" srcset="" />
+            </div>
         </div>
-     </div>
-       <div class="page2-content-container">
-        <div class="top-container">
-            <h1>ABOUT ME</h1>
-            <p>I’m currently trying my best to learn more about my self, encouraging
-                to work hard in order to achieve what I really want to be and whom I 
-                wanted to be with.</p>
-            <h1>Hobbies</h1>
-            <p>I have a passion for engaging in outdoor 
-                pursuits like hiking and trekking.</p>
+        <div class="page2-content-container">
+            <div class="top-container">
+                <div class="top1">
+                    <h1 class="about-me">ABOUT <span class="highlight">ME</span></h1>
+                    <p>
+                        I’m currently trying my best to learn more about my self, encouraging
+                        to work hard in order to achieve what I really want to be and whom I
+                        wanted to be with.
+                    </p>
+                </div>
+                <div class="top2">
+                    <h1 class="about-me">Hobbies</h1>
+                    <p>
+                        I have a passion for engaging in outdoor pursuits like hiking and
+                        trekking.
+                    </p>
+                </div>
+               
+            </div>
+            <div class="bottom-container">
+                <div class="context">
+                    <blockquote>
+                        “We each need to find our own inspiration. Sometimes that’s not easy”
+                    </blockquote>
+                </div>
+                <div class="image">
+                    <img src="../../../assets/images/fb61831ee4aa0ae6e0049ce84ab5620f-removebg-preview.png" alt=""
+                    srcset="">
+                </div>
+
+            </div>
         </div>
-        <div class="bottom-container">
-            <p>“We each need to find our own inspiration. 
-                Sometimes that’s not easy”</p>
-            <img src="../../../assets/images/png-clipart-black-and-purple-cat-illustration-t-shirt-jiji-hoodie-calcifer-studio-ghibli-black-cat-mammal-cat-like-mammal-removebg-preview 1.png" alt="">
-        </div>
-       </div>
-       <div class="page3-content-container">
-    
-       </div>
+        <div class="page3-content-container"></div>
     </div>
 </div>
