--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -36,7 +36,7 @@
                         trekking.
                     </p>
                 </div>
-               
+
             </div>
             <div class="bottom-container">
                 <div class="context">
@@ -46,11 +46,44 @@
                 </div>
                 <div class="image">
                     <img src="../../../assets/images/fb61831ee4aa0ae6e0049ce84ab5620f-removebg-preview.png" alt=""
-                    srcset="">
+                        srcset="">
                 </div>
 
             </div>
         </div>
-        <div class="page3-content-container"></div>
+        <div class="page3-content-container">
+            <div class="top-container">
+                <h1>Language and Tools</h1>
+            </div>
+            <div class="skilss-container">
+
+                <div class="row">
+                    <img src="../../../assets/images/skill-icons--react-dark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/skill-icons--angular-dark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/skill-icons--vuejs-dark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/devicon--bootstrap-wordmark 1.png" alt="" srcset="">   
+                </div>
+             
+                <div class="row">
+                    <img src="../../../assets/images/devicon--css3-wordmark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/devicon--figma 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/devicon--html5-wordmark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/devicon--mysql-wordmark 1.png" alt="" srcset="">    
+                </div>
+              
+                <div class="row">
+                    <img src="../../../assets/images/devicon--postgresql-wordmark 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/devicon--sass 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/vscode-icons--file-type-typescript-official 1.png" alt="" srcset="">
+                    <img src="../../../assets/images/vscode-icons--file-type-js-official 1.png" alt="" srcset="">
+                </div>
+             
+                <div class="row-springboot">
+                    <img  src="../../../assets/images/logos--spring 1.png" alt="" srcset="">
+                </div>
+                
+            </div>
+        </div>
+        
     </div>
 </div>
