--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,138 +1,187 @@
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-*{
-    font-family: "Amaranth", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+
+* {
+  font-family: "Amaranth", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
-  
-  .amaranth-bold {
-    font-family: "Amaranth", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .amaranth-regular-italic {
-    font-family: "Amaranth", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .amaranth-bold-italic {
-    font-family: "Amaranth", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
 
-.main-container{
-   
-    display: flex;
-    background-color: #DEDE7D;
-    .left-container{
-      
-        height: 100%;
-        width:100%;
-        color: #661B1C;
-       
-        .content{
-           position: fixed;
-           top: 0;
-           display: flex;
-           flex-direction: column;
-          
-           height: 100vh;
-           width: 50vw;
-           padding: 180px 116px 426px 132px;
-           .title{
-            font-size: 55px;
-            font-weight: bold;
-           }
-           .sub{
-            font-size: 35px;
-            margin-top: 2em;
-           }
+.amaranth-bold {
+  font-family: "Amaranth", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
 
-           .button-connect{
-            cursor: pointer;
-            border: 1px solid #661B1C;
-            border-radius: 50px;
-            max-width: 450px;
-            font-size: 40px;
-            margin-top: 5em;
-            padding: 20px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-           }
-        }
-    }
+.amaranth-regular-italic {
+  font-family: "Amaranth", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
 
-    .right-container{
-       
+.amaranth-bold-italic {
+  font-family: "Amaranth", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.main-container {
+
+  display: flex;
+  background-color: #DEDE7D;
+
+  .left-container {
+
+    height: 100%;
+    width: 100%;
+    color: #661B1C;
+
+    .content {
+      position: fixed;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+
+      height: 100vh;
+      width: 50vw;
+      padding: 180px 116px 426px 132px;
+
+      .title {
+        font-size: 55px;
+        font-weight: bold;
+      }
+
+      .sub {
+        font-size: 35px;
+        margin-top: 2em;
+      }
+
+      .button-connect {
+        cursor: pointer;
+        border: 1px solid #661B1C;
+        border-radius: 50px;
+        max-width: 450px;
+        font-size: 40px;
+        margin-top: 5em;
+        padding: 20px;
         display: flex;
-        flex-direction: column;
-        width:100%;
-        .page1-content-container{
-            display: flex;
-            max-width: 50vw;
-            max-height: 100%;
-           .content{
-            img{
-                width: 50vw;
-                height: max-content;
-            }
-           }
-        }
-        .page2-content-container{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            max-height: 100%;
-            background-color: #B1C49E;
-            margin-top: -5px;
-           padding: 100px;
-            .top-container{
-            .top1{
-              margin: 40px;
-            }
-            .top2{
-              margin: 40px;
-            }
-              p{
-                font-size: 30px;
-              }
-              font-weight: bold;
-              .highlight{
-                color: #661B1C;
-              }
-              .about-me{
-                font-size: 55px;
-              }
-            }
-            .bottom-container{
-              margin-top: 30px;
-              display: flex;
-              justify-content: flex-end;
-              blockquote{
-                display: flex;
-                justify-content: flex-end;
-               font-size: 35px;
-                margin-right: -20px;
-                max-width: 350px;
-              }
-              .image{
-               display: flex;
-               align-self: flex-end;
-              }
-            
-            }
-        }
-        .page3-content-container{
-            display: flex;
-            max-height: 100%;
-            
-        }
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+      }
     }
+  }
+
+  .right-container {
+
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    .page1-content-container {
+      display: flex;
+      max-width: 50vw;
+      max-height: 100%;
+
+      .content {
+        img {
+          width: 50vw;
+          height: max-content;
+        }
+      }
+    }
+
+    .page2-content-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      max-height: 100%;
+      background-color: #B1C49E;
+      margin-top: -5px;
+      padding: 100px;
+
+      .top-container {
+        .top1 {
+          margin: 40px;
+        }
+
+        .top2 {
+          margin: 40px;
+        }
+
+        p {
+          font-size: 30px;
+        }
+
+        font-weight: bold;
+
+        .highlight {
+          color: #661B1C;
+        }
+
+        .about-me {
+          font-size: 55px;
+        }
+      }
+
+      .bottom-container {
+        margin-top: 30px;
+        display: flex;
+        justify-content: flex-end;
+
+        blockquote {
+          display: flex;
+          justify-content: flex-end;
+          font-size: 35px;
+          margin-right: -20px;
+          max-width: 350px;
+        }
+
+        .image {
+          
+          display: flex;
+          align-self: flex-end;
+          margin-right: -6em;
+        }
+
+      }
+    }
+
+    .page3-content-container {
+      display: flex;
+      max-height: 100%;
+      padding: 100px;
+      background-color: #936440;
+      display: flex;
+      flex-direction: column;
+
+      .skilss-container{
+        padding: 125px 0px 150px 0px;
+      }
+      img{
+       width: 105px;
+       height: auto;
+      }
+      .top-container{
+        font-size: 30px;
+        color: #DEDE7D;
+      }
+    
+      .row{
+        
+        padding: 20px;
+        display: flex;
+        justify-content: space-around;
+       }
+      
+       .row-springboot img{
+       display: flex;
+       width: 250px;
+       height: auto;
+       padding: 20px;
+       margin-left: 45px;
+       }
+    }
+  }
 }
