--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -84,6 +84,15 @@
                 
             </div>
         </div>
-        
+        <div class="page4-content-container">
+            <div class="content">
+                <q>No matter how many weapons you have, <br> 
+                    no matter how great  your technology <br>  might be, the world  cannot live  <br>  without love.</q>
+                <p>-Castle in the Sky</p>
+                <img id="profilePicture" src="../../../assets/images/png-clipart-black-cat-jiji-kitten-youtube-kitten-mammal-animals-thumbnail-removebg-preview 1.png" alt="" srcset="" />
+            </div>
+        </div>
+    
+
     </div>
 </div>
