--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -147,17 +147,15 @@
 
       }
     }
-
     .page3-content-container {
       display: flex;
       max-height: 100%;
-      padding: 100px;
+      padding: 150px;
       background-color: #936440;
-      display: flex;
       flex-direction: column;
 
       .skilss-container{
-        padding: 125px 0px 150px 0px;
+        padding: 200px 0px 150px 0px;
       }
       img{
        width: 75px;
@@ -169,7 +167,6 @@
       }
     
       .row{
-        
         padding: 20px;
         display: flex;
         justify-content: space-around;
@@ -182,6 +179,39 @@
        padding: 20px;
        margin-left: 55px;
        }
+    }
+    .page4-content-container{
+     
+      display: flex;
+      max-height: 100%;
+      padding: 155px;
+      background-color: white;
+      
+      .content q{
+          font-size: 35px;
+          font-style: italic;
+      }
+
+      .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        gap: 20px;
+        border: 1px solid red;
+        padding: 50px;
+        
+        img{
+          width: 450px;
+          height: auto;
+          margin-left: 50px;
+        }
+        p{
+          font-size: 20px;
+          color: #661B1C;
+          margin-left: 50px;
+
+        }
+      }
     }
   }
 }
